--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -3,6 +3,14 @@
   <div class="hr"></div>
   <div class="row">
     <div class="col-md-3 col-md-2">
+      <a href="../images/alex.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+         <%= image_tag("alex.jpg", :alt => "Alex Purcell", width: '100%', height: '100%', class:'image-size') %>
+        <div class="description">
+          <h3>Alex Purcell</h3>
+        </div>
+      </a>
+    </div>
+    <div class="col-md-3 col-md-2">
       <a href="../images/connor.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
          <%= image_tag("connor.jpg", :alt => "Connor Scott", width: '100%', height: '100%', class:'image-size') %>
         <div class="description">
@@ -31,14 +39,6 @@
          <%= image_tag("matt.jpg", :alt => "Matt van der Velden", width: '100%', height: '100%', class:'image-size') %>
         <div class="description">
           <h3>Matt Van der Velden </h3>
-        </div>
-      </a>
-    </div>
-    <div class="col-md-3 col-md-2">
-      <a href="../images/mike.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("mike.jpg", :alt => "Michael Barrell", width: '100%', height: '100%', class:'image-size') %>
-        <div class="description">
-          <h3>Michael Barrell</h3>
         </div>
       </a>
     </div>
