--- a/app/views/admin_mailer/gift_crossed.text.erb
+++ b/app/views/admin_mailer/gift_crossed.text.erb
@@ -4,7 +4,7 @@ The following gift has been crossed off/contributed towards:
 
 Gift: <%= @cg.item_name %>
 Guest Names: <%= @cg.guest_names %>
-<%if gift.contributable %>
+<%if @gift.contributable %>
 Contribution Amount: <%= @cg.contribution_amount %>
 <% else %>
 Quantity: <%= @cg.quantity_contributed %>
