Fix pics of people and add pic of ria

--- a/app/views/pages/_bridesmaids.html.erb
+++ b/app/views/pages/_bridesmaids.html.erb
@@ -6,7 +6,7 @@
       <a href="../images/gen.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
          <%= image_tag("gen.jpg", :alt => "Genevieve Walker", width: '100%', height: '100%', class: 'image-size') %>
         <div class="description">
-          <h3>Genevieve Walker</h3>
+          <h3>Gen Walker</h3>
         </div>
       </a>
     </div>
