--- a/app/views/pages/_wedding_party.html.erb
+++ b/app/views/pages/_wedding_party.html.erb
@@ -48,6 +48,15 @@
           </div>
         </a>
       </div>
+      <div class="col-md-3 col-md-2">
+        <a href="../images/ria.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
+         <%= image_tag("ria.jpg", :alt => "Ria Kulathinal", width: '100%', height: '100%', class:'image-size') %>
+          <div class="description">
+            <h3>Ria Mathew Kulathinal </h3>
+            <span>Flower Girl</span>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
 </div>
