--- a/app/views/gifts/_modal.html.erb
+++ b/app/views/gifts/_modal.html.erb
@@ -4,9 +4,9 @@
   </div>
   <div class="modal-body">
     <% if @gift.contributable %>
-      <p>Great! Thank you for choosing to contribute towards <b><%= @gift.name %>(<%= number_to_currency @gift.remainder_contribution_required%>)</b> for Iain and Tania. Please enter your name(s) and the amount you wish to contribute so that we can have a written record of everyone's gifts.</p>
+      <p>Great! Thank you for choosing to contribute towards <b><%= @gift.name %> (<%= number_to_currency @gift.remainder_contribution_required%>)</b> for Iain and Tania. Please enter your name(s) and the amount you wish to contribute so that we can have a written record of everyone's gifts.</p>
     <% else %>
-      <p>Great! You want to give Iain and Tania <b><%= @gift.name %>(<%= number_to_currency @gift.price%>)</b> and want to claim it. Please enter your name(s) and the relevant quantity you are giving (if applicable) of this item that you wish to give us. By doing this way we can keep track of everyone's gifts and match up with Online Banking. </p>
+      <p>Great! You want to give Iain and Tania <b><%= @gift.name %> (<%= number_to_currency @gift.price%>)</b> and want to claim it. Please enter your name(s) and the relevant quantity of this item that you wish to give us (if applicable). By doing this way we can keep track of everyone's gifts and match up with Online Banking. </p>
     <% end %>
     <%= render 'cgs/form', gift: @gift %>
   </div>
