Make web app front page responsive

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,5 +1,9 @@
 <div class='container'>
+  <div class='general-details'>
+    <h3 align='center'> IAIN WALKER & TANIA JACOB </h3>
+    <h4 class='fine-details'> February 25 2017, Lower Hutt, New Zealand </h4>
+  </div>
   <div class='our-image'>
-    <%= image_tag("us.jpg", :alt => "us", class:'us-image', width: '100%', height: '100%') %>
+    <%= image_tag("us.jpg", :alt => "us", class:'img-responsive') %>
   </div>
 </div>
