--- a/app/assets/stylesheets/_headings.scss
+++ b/app/assets/stylesheets/_headings.scss
@@ -54,4 +54,13 @@ h2 {
 
 h3 {
   font-size: 50px;
+  color: $pink;
+}
+
+
+.fine-details {
+  font-weight: italic;
+  text-align: center;
+  margin-top: 0px;
+  color: $pink;
 }
