--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -4,29 +4,32 @@
   <div class='countdown-clock'>
     <div class="your-clock"></div>
   </div>
-  <div class='row'>
+  <div class='row all-details'>
     <div class="col-md-6 col-sm-6">
       <div class="event-item">
-        <h2 class='subheading'>Ceremony</h2>
+        <h2 class='subheading'>
+          <%= link_to "Ceremony", "https://www.google.co.nz/maps/place/Catholic+Parish+of+St+Peter+and+Paul/@-41.2113714,174.9048733,17z/data=!4m13!1m7!3m6!1s0x6d38aa5708e876a1:0xd36c2514129e2f0c!2s60+Knights+Rd,+Lower+Hutt+5010!3b1!8m2!3d-41.2113714!4d174.907062!3m4!1s0x6d38aa5708e876a1:0x6ab11ad6c3af4f64!8m2!3d-41.2113815!4d174.9070699"%>
+        </h2>
         <span>13:30 - 14:30</span>
         <p> Sts Peter and Paul Church</p>
         <p> 60 Knights Road </p>
         <p> Lower Hutt </p>
         <p> Wellington </p>
         <p> New Zealand </p>      
-        <%= image_tag("church.jpg", :alt => "church", width: '100%', height: '250' ) %>
       </div>
     </div>
     <div class="col-md-6 col-sm-6">
       <div class="event-item">
-        <h2 class='subheading'> Reception</h2>
+        <h2 class='subheading'>
+          <%= link_to "Reception", "https://www.google.co.nz/maps/place/Boulcott's+Farm+Heritage+Golf+Club/@-41.2040459,174.9249396,16.25z/data=!4m15!1m9!4m8!1m0!1m6!1m2!1s0x6d38aa8fccda3df9:0xc136add982db6a1c!2sBoulcott's+Farm+Heritage+Golf+Club+33+Military+Rd,+Boulcott,+Lower+Hutt+5010!2m2!1d174.9271791!2d-41.2000801!3m4!1s0x6d38aa8fccda3df9:0xc136add982db6a1c!8m2!3d-41.2000801!4d174.9271791"%>
+        </h2>
         <span>17:30 - 22.00</span>
-        <p> Boulcott Farm</p>
+        <p> Boulcott Farm Heritage Golf Club</p>
         <p> 30 Military Road </p>
         <p> Lower Hutt </p>
         <p> Wellington </p>
-        <p> New Zealand </p>      
-        <%= image_tag("reception.jpg", :alt => "reception", width: '100%', height: '250') %>
+        <p> New Zealand </p>
       </div>
     </div>
+  </div>
 </div>
