Add faq page and new css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -224,3 +224,12 @@ time {
 .all-details {
   padding-left: 180px;
 }
+
+.question {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.each-q {
+  padding-bottom: 14px;
+}
