--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -38,7 +38,7 @@
       <a href="../images/matt.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
          <%= image_tag("matt.jpg", :alt => "Matt van der Velden", width: '100%', height: '100%', class:'image-size') %>
         <div class="description">
-          <h3>Matt Van der Velden </h3>
+          <h3>Matthew Van der Velden </h3>
         </div>
       </a>
     </div>
