--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -8,6 +8,7 @@
       </div>
     <% end %>
     <%= f.text_field :full_name, placeholder: 'Enter full name', class: 'form-control required', autofocus: true, label: 'Full Name' %>
+    <%= f.text_field :email, placeholder: 'Enter email', class: 'form-control required', label: 'Email' %>
     <%= f.select :attending, [ 'Yes', 'No' ], :prompt => 'Are you attending?', class: 'form-control required' %>
     <div class='optional-elements'>
       <%= f.form_group :main_meal_preference, label: { text: "Main Preference" } do %>
