--- a/app/views/rsvps/index.html.erb
+++ b/app/views/rsvps/index.html.erb
@@ -7,6 +7,7 @@
   <table class = 'table table-striped'>
     <thead>
       <th> Guest </th>
+      <th> Email </th>
       <th> Attending </th>
       <th> Mains Preference </th>
       <th> Dessert Preference </th>
@@ -18,6 +19,7 @@
     <% @rsvps.sort_by(&:"#{'id'}").each do |rsvp| %>
       <tr>
         <td> <%= Guest.find(rsvp.guest_id).full_name %> </td>
+        <td> <%= rsvp.email %> </td>
         <td> <%= rsvp.attending %> </td>
         <td> <%= rsvp.main_meal_preference %> </td>
         <td> <%= rsvp.dessert_preference %> </td>
