Fix quote marks across website

--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: 'Ave';
-  src: font-url('Ave.ttf') format('truetype')
+  font-family: "Ave";
+  src: font-url('Ave.ttf') format("truetype")
 }
 
 @font-face {
-  font-family: 'JWS';
-  src: font-url('JWS.ttf') format('truetype')
+  font-family: "JWS";
+  src: font-url("JWS.ttf") format("truetype")
 }
 
 @font-face {
-  font-family: 'AR';
-  src: font-url('AR.otf') format('opentype')
+  font-family: "AR";
+  src: font-url("AR.otf") format("opentype")
 }
 
 @font-face {
-  font-family: 'Avenir';
-  src: font-url('Avenir.otf') format('opentype')
+  font-family: "Avenir";
+  src: font-url("Avenir.otf") format("opentype")
 }
