--- a/app/assets/stylesheets/_headings.scss
+++ b/app/assets/stylesheets/_headings.scss
@@ -49,7 +49,7 @@ h2 {
   background-repeat: no-repeat;
   margin-bottom: 30px;
   background-position: center;
-  background-image: url('../images/divider.png');
+  background-image: url("../images/divider.png");
 }
 
 h3 {
