--- a/app/views/pages/_bridesmaids.html.erb
+++ b/app/views/pages/_bridesmaids.html.erb
@@ -1,10 +1,10 @@
-<div class = 'container'>
+<div class = "container">
   <div class="row">
-    <h2 align='center'>Bridesmaids</h2>
+    <h2 align="center">Bridesmaids</h2>
     <div class="hr"></div>
     <div class="col-md-3 col-md-2">
       <a href="../images/gen.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-         <%= image_tag("gen.jpg", :alt => "Genevieve Walker", width: '100%', height: '100%', class: 'image-size') %>
+         <%= image_tag("gen.jpg", :alt => "Genevieve Walker", width: "100%", height: "100%", class: "image-size") %>
         <div class="description">
           <h3>Gen Walker</h3>
         </div>
@@ -12,7 +12,7 @@
     </div>
     <div class="col-md-3 col-md-2">
       <a href="../images/ida.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-         <%= image_tag("ida.jpg", :alt => "Ida Chirayath", width: '100%', height: '100%', class: 'image-size') %>
+         <%= image_tag("ida.jpg", :alt => "Ida Chirayath", width: "100%", height: "100%", class: "image-size") %>
         <div class="description">
           <h3>Ida Chirayath</h3>
         </div>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-3 col-md-2">
       <a href="../images/kels.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-         <%= image_tag("kels.jpg", :alt => "Kelsey Morrison", width: '100%', height: '100%', class: 'image-size') %>
+         <%= image_tag("kels.jpg", :alt => "Kelsey Morrison", width: "100%", height: "100%", class: "image-size") %>
         <div class="description">
           <h3>Kelsey Morrison</h3>
         </div>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-3 col-md-2">
       <a href="../images/risha.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-         <%= image_tag("risha.jpg", :alt => "Risha Bhagat", width: '100%', height: '100%', class: 'image-size') %>
+         <%= image_tag("risha.jpg", :alt => "Risha Bhagat", width: "100%", height: "100%", class: "image-size") %>
         <div class="description">
           <h3>Risha Bhagat</h3>
         </div>
@@ -36,7 +36,7 @@
     </div>
     <div class="col-md-3 col-md-2">
       <a href="../images/sarah.jpg" data-rel="lightcase:mw-bridesmaid" class="people-item">
-         <%= image_tag("sarah.jpg", :alt => "Sarah Yeo", width: '100%', height: '100%', class: 'image-size') %>
+         <%= image_tag("sarah.jpg", :alt => "Sarah Yeo", width: "100%", height: "100%", class: "image-size") %>
         <div class="description">
           <h3>Sarah Yeo</h3>
         </div>
