--- a/app/views/pages/_main_people.html.erb
+++ b/app/views/pages/_main_people.html.erb
@@ -1,48 +1,48 @@
-<div class='container'>
-  <h2 align='center'> People Involved </h2>
+<div class="container">
+  <h2 align="center"> People Involved </h2>
   <div class="hr"></div>
-  <div class='row'>
+  <div class="row">
     <div id="owl-demo" class="owl-carousel">
-      <div class='item'>
-        <%= image_tag("iw.jpg", :alt => "Iain Walker", width: '100%', height: '100%') %>
-        <div class = 'description'>
+      <div class="item">
+        <%= image_tag("iw.jpg", :alt => "Iain Walker", width: "100%", height: "100%") %>
+        <div class = "description">
           <h4> IAIN WALKER </h4>
           <span> Groom </span>
         </div>
       </div>
-      <div class='item'>
-        <%= image_tag("tj.jpg", :alt => "Tania Jacob", width: '100%', height: '100%') %>
-        <div class = 'description'>
+      <div class="item">
+        <%= image_tag("tj.jpg", :alt => "Tania Jacob", width: "100%", height: "100%") %>
+        <div class = "description">
           <h4> TANIA JACOB </h4>
           <span> Bride </span>
         </div>
       </div>
-      <div class='item'>
-        <%= image_tag("beena.jpg", :alt => "Beena Jacob", width: '100%', height: '100%') %>
-        <div class = 'description'>
+      <div class="item">
+        <%= image_tag("beena.jpg", :alt => "Beena Jacob", width: "100%", height: "100%") %>
+        <div class = "description">
           <h4> BEENA JACOB </h4>
-          <span> Bride's Mother </span>
+          <span> Bride"s Mother </span>
         </div>
       </div>
-      <div class='item'>
-        <%= image_tag("jeco.jpg", :alt => "Jeco Jacob", width: '100%', height: '100%') %>
-        <div class = 'description'>
+      <div class="item">
+        <%= image_tag("jeco.jpg", :alt => "Jeco Jacob", width: "100%", height: "100%") %>
+        <div class = "description">
           <h4> JECO JACOB </h4>
-          <span> Bride's Father </span>
+          <span> Bride"s Father </span>
         </div>
       </div>
-      <div class='item'>
-        <%= image_tag("lynn.jpg", :alt => "Lynn Walker", width: '100%', height: '100%') %>
-        <div class = 'description'>
+      <div class="item">
+        <%= image_tag("lynn.jpg", :alt => "Lynn Walker", width: "100%", height: "100%") %>
+        <div class = "description">
          <h4> LYNN WALKER </h4>
-          <span> Groom's Mother </span>
+          <span> Groom"s Mother </span>
         </div>
       </div>
-      <div class='item'>
-        <%= image_tag("david.jpg", :alt => "David Walker", width: '100%', height: '100%') %>
-        <div class = 'description'>
+      <div class="item">
+        <%= image_tag("david.jpg", :alt => "David Walker", width: "100%", height: "100%") %>
+        <div class = "description">
           <h4> DAVID WALKER </h4>
-          <span> Groom's Father </span>
+          <span> Groom"s Father </span>
         </div>
       </div>
     </div>
