--- a/app/views/pages/people.html.erb
+++ b/app/views/pages/people.html.erb
@@ -1,14 +1,14 @@
-<div class='container'>
-  <div class= 'main-people'>
-    <%= render 'pages/main_people' %>
+<div class="container">
+  <div class= "main-people">
+    <%= render "pages/main_people" %>
   </div>
-  <div class='wedding-party'>
-    <%= render 'pages/wedding_party' %>
+  <div class="wedding-party">
+    <%= render "pages/wedding_party" %>
   </div>
-  <div class= 'bridesmaids'>
-    <%= render 'pages/bridesmaids' %>
+  <div class= "bridesmaids">
+    <%= render "pages/bridesmaids" %>
   </div>
-  <div class='groomsmen'>
-    <%= render 'pages/groomsmen' %>
+  <div class="groomsmen">
+    <%= render "pages/groomsmen" %>
   </div>
 </div>
