--- a/app/views/cgs/_form.html.erb
+++ b/app/views/cgs/_form.html.erb
@@ -2,17 +2,18 @@
   <% @cg = Cg.new %>
   <%= bootstrap_form_for(@cg, layout: :horizontal)  do |f| %>
     <%= f.alert_message "Please fix the errors below." %>
-    <%= f.text_field :guest_names, placeholder: 'Enter your names', class: 'form-control required', control_col: "col-sm-8", autofocus: true, label: 'Guest Names' %>
-    <%= f.number_field :contribution_amount, placeholder: 'Enter Contribution Amount', label: 'Contribution Amount', control_col: "col-sm-8" if @gift.contributable %>
-    <%= f.number_field :quantity_contributed, placeholder: 'Enter Quantity', label: 'Quantity', control_col: "col-sm-8", min: 1, max: @gift.remainder_available if !@gift.contributable && @gift.remainder_available > 1 %>
+    <%= f.text_field :guest_names, placeholder: "Enter your names", class: "form-control required", control_col: "col-sm-8", autofocus: true, label: "Guest Names" %>
+    <%= f.number_field :contribution_amount, placeholder: 
+    "Enter Contribution Amount", label: 'Contribution Amount', control_col: "col-sm-8" if @gift.contributable %>
+    <%= f.number_field :quantity_contributed, placeholder: "Enter Quantity", label: "Quantity", control_col: "col-sm-8", min: 1, max: @gift.remainder_available if !@gift.contributable && @gift.remainder_available > 1 %>
     <%= f.hidden_field :item_name, value: @gift.name %>
     <%= f.hidden_field :gift_id, value: @gift.id %>
 
-    <div class='level-header'>
-      <%= button_tag(type: 'submit', class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
+    <div class="level-header">
+      <%= button_tag(type: "submit", class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Saving..."}) do %>
         <i class="fa fa-save"></i> Save
       <% end %>      
-      <%= link_to fa_icon("undo", text: 'Cancel'), gifts_path, class: 'btn generic-button command-button hvr-sweep-to-right' %>
+      <%= link_to fa_icon("undo", text: "Cancel"), gifts_path, class: "btn generic-button command-button hvr-sweep-to-right" %>
     </div>
   <% end %>
 </div>
