--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,10 +1,10 @@
-<div class = 'container level-header guest-page'>
+<div class = "container level-header guest-page">
   <h2> Guest List </h2>
   <% @guests = locals[:guests] if @guests.nil? %> 
-  <div class= 'pull-right'>
-    <%= link_to fa_icon("plus", text: 'Add Guest'), new_guest_path, class: "btn generic-button command-button hvr-sweep-to-right", id: 'new-guest-link' if current_user && user_signed_in? %>
+  <div class= "pull-right">
+    <%= link_to fa_icon("plus", text: "Add Guest"), new_guest_path, class: "btn generic-button command-button hvr-sweep-to-right", id: "new-guest-link" if current_user && user_signed_in? %>
   </div>
-  <table class = 'table table-striped'>
+  <table class = "table table-striped">
     <thead>
       <th> First Name </th>
       <th> Surname </th>
@@ -15,7 +15,7 @@
         <th> Administration </th>
       <% end %>
     </thead>
-    <% @guests.sort_by(&:"#{'id'}").each do |guest| %>
+    <% @guests.sort_by(&:"#{"id"}").each do |guest| %>
       <tr>
         <td> <%= guest.first_name %> </td>
         <td> <%= guest.surname %> </td>
@@ -23,9 +23,9 @@
         <td> <%= guest.address %> </td>
         <td> <%= guest.email %> </td>
         <% if current_user && user_signed_in? %> 
-          <td><%= link_to fa_icon("pencil", text:'Edit'), edit_guest_path(id: guest.id), class: "btn generic-button command-button hvr-sweep-to-right", id: 'edit-guest-link' %>
-          <%= link_to fa_icon("trash", text: 'Delete'), guest_path(guest), method: :delete,
-                class: "btn generic-button command-button hvr-sweep-to-right", id: 'delete-guest-link' %></td>
+          <td><%= link_to fa_icon("pencil", text:"Edit"), edit_guest_path(id: guest.id), class: "btn generic-button command-button hvr-sweep-to-right", id: "edit-guest-link" %>
+          <%= link_to fa_icon("trash", text: "Delete"), guest_path(guest), method: :delete,
+                class: "btn generic-button command-button hvr-sweep-to-right", id: "delete-guest-link" %></td>
         <%end%>
       </tr>
     <%end%>
