--- a/app/views/pages/_groomsmen.html.erb
+++ b/app/views/pages/_groomsmen.html.erb
@@ -1,10 +1,10 @@
-<div class = 'container'>
-  <h2 align='center'>Groomsmen</h2>
+<div class = "container">
+  <h2 align="center">Groomsmen</h2>
   <div class="hr"></div>
   <div class="row">
     <div class="col-md-3 col-md-2">
       <a href="../images/alex.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("alex.jpg", :alt => "Alex Purcell", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("alex.jpg", :alt => "Alex Purcell", width: "100%", height: "100%", class:"image-size") %>
         <div class="description">
           <h3>Alex Purcell</h3>
         </div>
@@ -12,7 +12,7 @@
     </div>
     <div class="col-md-3 col-md-2">
       <a href="../images/connor.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("connor.jpg", :alt => "Connor Scott", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("connor.jpg", :alt => "Connor Scott", width: "100%", height: "100%", class:"image-size") %>
         <div class="description">
           <h3>Connor Scott </h3>
         </div>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-3 col-md-2">
       <a href="../images/eddie.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("eddie.jpg", :alt => "Eddie Stevens", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("eddie.jpg", :alt => "Eddie Stevens", width: "100%", height: "100%", class:"image-size") %>
         <div class="description">
           <h3>Eddie Stevens</h3>
         </div>
@@ -28,7 +28,7 @@
     </div>
       <div class="col-md-3 col-md-2">
         <a href="../images/farshid.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("farshid.jpg", :alt => "Farshid Shokoohi", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("farshid.jpg", :alt => "Farshid Shokoohi", width: "100%", height: "100%", class:"image-size") %>
           <div class="description">
             <h3>Farshid Shokoohi </h3>
           </div>
@@ -36,7 +36,7 @@
       </div>
     <div class="col-md-3 col-md-2">
       <a href="../images/matt.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("matt.jpg", :alt => "Matt van der Velden", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("matt.jpg", :alt => "Matt van der Velden", width: "100%", height: "100%", class:"image-size") %>
         <div class="description">
           <h3>Matthew Van der Velden </h3>
         </div>
