--- a/app/views/pages/_wedding_party.html.erb
+++ b/app/views/pages/_wedding_party.html.erb
@@ -1,11 +1,11 @@
-<div class = 'container'>
+<div class = "container">
   <div class="row">
-    <h2 align='center'>Wedding Party</h2>
+    <h2 align="center">Wedding Party</h2>
     <div class="hr"></div>
     <div class="row">
       <div class="col-md-3 col-md-2">
         <a href="../images/anita.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("anita.jpg", :alt => "Anita Jacob", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("anita.jpg", :alt => "Anita Jacob", width: "100%", height: "100%", class:"image-size") %>
           <div class="description">
             <h3>Anita Jacob </h3>
             <span>Maid of Honour</span>
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-3 col-md-2">
         <a href="../images/annie.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("annie.jpg", :alt => "Annie Jacob", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("annie.jpg", :alt => "Annie Jacob", width: "100%", height: "100%", class:"image-size") %>
           <div class="description">
             <h3>Annie Jacob</h3>
             <span>Flower Girl</span>
@@ -23,7 +23,7 @@
       </div>
       <div class="col-md-3 col-md-2">
         <a href="../images/fraser.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("fraser.jpg", :alt => "Fraser Berry", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("fraser.jpg", :alt => "Fraser Berry", width: "100%", height: "100%", class:"image-size") %>
           <div class="description">
             <h3>Fraser Berry</h3>
               <span>Best Man</span>
@@ -32,7 +32,7 @@
       </div>
       <div class="col-md-3 col-md-2">
         <a href="../images/john.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("john.jpg", :alt => "John Tharakan", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("john.jpg", :alt => "John Tharakan", width: "100%", height: "100%", class:"image-size") %>
           <div class="description">
             <h3>John Tharakan</h3>
             <span>Ring Bearer</span>
@@ -41,7 +41,7 @@
       </div>
       <div class="col-md-3 col-md-2">
         <a href="../images/nina.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("nina.jpg", :alt => "Nina Jacob", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("nina.jpg", :alt => "Nina Jacob", width: "100%", height: "100%", class:"image-size") %>
           <div class="description">
             <h3>Nina Jacob </h3>
             <span>Flower Girl</span>
@@ -50,7 +50,7 @@
       </div>
       <div class="col-md-3 col-md-2">
         <a href="../images/ria.jpg" data-rel="lightcase:mw-groomsmen" class="people-item">
-         <%= image_tag("ria.jpg", :alt => "Ria Kulathinal", width: '100%', height: '100%', class:'image-size') %>
+         <%= image_tag("ria.jpg", :alt => "Ria Kulathinal", width: "100%", height: "100%", class:"image-size") %>
           <div class="description">
             <h3>Ria Mathew Kulathinal </h3>
             <span>Flower Girl</span>
