--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -1,11 +1,11 @@
-<div class='container'>
-  <h2 align='center'> Accomodation </h2>
+<div class="container">
+  <h2 align="center"> Accomodation </h2>
   <div class="hr"></div>
-  <div class='row'>
+  <div class="row">
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("angus-inn.jpg", :alt => "angus-inn", width: '100%', height: '250') %>
-          <h2 class='subheading'><%= link_to 'Angus Inn', 'http://www.angusinn.co.nz/accommodation', class: 'subheading' %></h2>
+        <%= image_tag("angus-inn.jpg", :alt => "angus-inn", width: "100%", height: "250") %>
+          <h2 class="subheading"><%= link_to "Angus Inn", "http://www.angusinn.co.nz/accommodation", class: "subheading" %></h2>
           <span class="rating">
             <i class="fa fa-star rating"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
@@ -14,8 +14,8 @@
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: '100%', height: '250') %>
-          <h2 class='subheading'><%= link_to 'Boulcott Lodge Inn', 'http://www.boulcottlodge.co.nz/accommodation.html', class: 'subheading' %></h2>
+        <%= image_tag("boulcott-lodge.jpg", :alt => "boulcott-lodge", width: "100%", height: "250") %>
+          <h2 class="subheading"><%= link_to "Boulcott Lodge Inn", "http://www.boulcottlodge.co.nz/accommodation.html", class: "subheading" %></h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
@@ -25,8 +25,8 @@
     </div>
     <div class="col-sm-4 col-xs-12">
       <div class="hotel-item">
-        <%= image_tag("green-gables.jpg", :alt => "green-gables", width: '100%', height: '250') %>
-          <h2 class='subheading'><%= link_to 'Green Gables Motel', 'http://greengablesmotel.co.nz/rooms', class: 'subheading' %></h2>
+        <%= image_tag("green-gables.jpg", :alt => "green-gables", width: "100%", height: "250") %>
+          <h2 class="subheading"><%= link_to "Green Gables Motel", "http://greengablesmotel.co.nz/rooms", class: "subheading" %></h2>
           <span class="rating">
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
           </span>
