--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,6 +1,6 @@
-<div class = 'container'>
-  <h2 align='center'> Rsvp</h2>
-  <h4 align='center'><i> Please RSVP by Friday 20 January 2017 </i></h4>
+<div class = "container">
+  <h2 align="center"> Rsvp</h2>
+  <h4 align="center"><i> Please RSVP by Friday 20 January 2017 </i></h4>
   <div class="hr"></div>
-  <%= render 'form' %>
+  <%= render "form" %>
 </div>
