Fix quote marks - v2

--- a/app/views/pages/the_details.html.erb
+++ b/app/views/pages/the_details.html.erb
@@ -21,7 +21,7 @@
     <div class="col-md-6 col-sm-6">
       <div class="event-item">
         <h2 class="subheading">
-          <%= link_to "Reception", "https://www.google.co.nz/maps/place/Boulcott"s+Farm+Heritage+Golf+Club/@-41.2040459,174.9249396,16.25z/data=!4m15!1m9!4m8!1m0!1m6!1m2!1s0x6d38aa8fccda3df9:0xc136add982db6a1c!2sBoulcott"s+Farm+Heritage+Golf+Club+33+Military+Rd,+Boulcott,+Lower+Hutt+5010!2m2!1d174.9271791!2d-41.2000801!3m4!1s0x6d38aa8fccda3df9:0xc136add982db6a1c!8m2!3d-41.2000801!4d174.9271791"%>
+          <%= link_to "Reception", "https://www.google.co.nz/maps/place/Boulcott's+Farm+Heritage+Golf+Club/@-41.2040459,174.9249396,16.25z/data=!4m15!1m9!4m8!1m0!1m6!1m2!1s0x6d38aa8fccda3df9:0xc136add982db6a1c!2sBoulcott's+Farm+Heritage+Golf+Club+33+Military+Rd,+Boulcott,+Lower+Hutt+5010!2m2!1d174.9271791!2d-41.2000801!3m4!1s0x6d38aa8fccda3df9:0xc136add982db6a1c!8m2!3d-41.2000801!4d174.9271791"%>
         </h2>
         <span>17:30 - 22.00</span>
         <p> Boulcott Farm Heritage Golf Club</p>
