--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -7,7 +7,7 @@
     <%= f.text_area :full_name, label: "Your Full Name" %>
     <%= f.text_area :email, label: "Your Email" %>
     <%= f.text_area :content, label: "Message", rows: "10" %>
-    <%= button_tag(type: "submit", class: "btn generic-button command-button ", data: {disable_with: "<i class="fa fa-spinner fa-spin"></i> Sending..."}) do %>
+    <%= button_tag(type: "submit", class: "btn generic-button command-button ", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Sending..."}) do %>
       <i class="fa fa-paper-plane"></i> Send
     <% end %>
   <% end %>
