--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -26,7 +26,7 @@
       <%= f.text_field :dietary_requirements, placeholder: "Enter any special dietary requirements", class: "form-control", label: "Dietary Requirements" %>
     </div>
     <div class="level-header">
-      <%= button_tag(type: "submit", class: "btn generic-button command-button", data: {disable_with: "<i class="fa fa-spinner fa-spin"></i> Submitting..."}) do %>
+      <%= button_tag(type: "submit", class: "btn generic-button command-button", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Submitting..."}) do %>
         <i class="fa fa-save"></i> Submit
       <% end %>
     </div>
